@@ -1,12 +1,8 @@
 package com.lt.dbcomparator.dto;
 
-import com.lt.dbcomparator.entity.Customer;
-import com.lt.dbcomparator.entity.CustomerProfile;
-import com.lt.dbcomparator.entity.Order;
-import com.lt.dbcomparator.entity.OrderItem;
-import com.lt.dbcomparator.entity.Product;
+import com.lt.dbcomparator.entity.*;
+import com.lt.dbcomparator.entity.*;
 import io.swagger.v3.oas.annotations.media.Schema;
-import lombok.Value;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
@@ -15,23 +11,22 @@ import java.util.List;
 
 /**
  * DTO для ответа GET /api/customers/{id} — Customer с полным графом связей.
- * Используем @Value для иммутабельности (аналог record в Java 11).
+ * Используем record для иммутабельности и лаконичности.
  */
-@Value
 @Schema(description = "Клиент со связанными данными")
-public class CustomerResponse {
-    Long id;
-    String firstName;
-    String lastName;
-    String email;
-    String phone;
-    LocalDate dateOfBirth;
-    LocalDateTime registeredAt;
-    String status;
-    Integer loyaltyPoints;
-    String country;
-    ProfileResponse profile;
-    List<OrderResponse> orders;
+public record CustomerResponse(
+        Long id,
+        String firstName,
+        String lastName,
+        String email,
+        String phone,
+        LocalDate dateOfBirth,
+        LocalDateTime registeredAt,
+        String status,
+        Integer loyaltyPoints,
+        String country,
+        ProfileResponse profile,
+        List<OrderResponse> orders) {
 
     public static CustomerResponse from(Customer entity) {
         return new CustomerResponse(
@@ -47,25 +42,22 @@ public class CustomerResponse {
                 entity.getCountry(),
                 entity.getProfile() != null ? ProfileResponse.from(entity.getProfile()) : null,
                 entity.getOrders() != null
-                        ? entity.getOrders().stream().map(OrderResponse::from)
-                                .collect(java.util.stream.Collectors.toList())
+                        ? entity.getOrders().stream().map(OrderResponse::from).toList()
                         : List.of());
     }
 
     // ── Вложенные DTO ──
 
-    @Value
     @Schema(description = "Профиль клиента")
-    public static class ProfileResponse {
-        Long id;
-        String avatarUrl;
-        String bio;
-        String preferredLanguage;
-        Boolean notificationsEnabled;
-        String address;
-        String city;
-        String zipCode;
-
+    public record ProfileResponse(
+            Long id,
+            String avatarUrl,
+            String bio,
+            String preferredLanguage,
+            Boolean notificationsEnabled,
+            String address,
+            String city,
+            String zipCode) {
         public static ProfileResponse from(CustomerProfile p) {
             return new ProfileResponse(
                     p.getId(), p.getAvatarUrl(), p.getBio(),
@@ -74,43 +66,38 @@ public class CustomerResponse {
         }
     }
 
-    @Value
     @Schema(description = "Заказ")
-    public static class OrderResponse {
-        Long id;
-        String orderNumber;
-        LocalDateTime orderDate;
-        String status;
-        BigDecimal totalAmount;
-        String currency;
-        String shippingAddress;
-        String notes;
-        LocalDate expectedDelivery;
-        List<ItemResponse> items;
-
+    public record OrderResponse(
+            Long id,
+            String orderNumber,
+            LocalDateTime orderDate,
+            String status,
+            BigDecimal totalAmount,
+            String currency,
+            String shippingAddress,
+            String notes,
+            LocalDate expectedDelivery,
+            List<ItemResponse> items) {
         public static OrderResponse from(Order o) {
             return new OrderResponse(
                     o.getId(), o.getOrderNumber(), o.getOrderDate(),
                     o.getStatus(), o.getTotalAmount(), o.getCurrency(),
                     o.getShippingAddress(), o.getNotes(), o.getExpectedDelivery(),
                     o.getItems() != null
-                            ? o.getItems().stream().map(ItemResponse::from)
-                                    .collect(java.util.stream.Collectors.toList())
+                            ? o.getItems().stream().map(ItemResponse::from).toList()
                             : List.of());
         }
     }
 
-    @Value
     @Schema(description = "Позиция заказа")
-    public static class ItemResponse {
-        Long id;
-        Integer quantity;
-        BigDecimal unitPrice;
-        BigDecimal totalPrice;
-        BigDecimal discount;
-        LocalDateTime createdAt;
-        ProductResponse product;
-
+    public record ItemResponse(
+            Long id,
+            Integer quantity,
+            BigDecimal unitPrice,
+            BigDecimal totalPrice,
+            BigDecimal discount,
+            LocalDateTime createdAt,
+            ProductResponse product) {
         public static ItemResponse from(OrderItem item) {
             return new ItemResponse(
                     item.getId(), item.getQuantity(),
@@ -120,18 +107,16 @@ public class CustomerResponse {
         }
     }
 
-    @Value
     @Schema(description = "Товар")
-    public static class ProductResponse {
-        Long id;
-        String name;
-        String sku;
-        String description;
-        BigDecimal price;
-        String category;
-        Double weight;
-        Boolean inStock;
-
+    public record ProductResponse(
+            Long id,
+            String name,
+            String sku,
+            String description,
+            BigDecimal price,
+            String category,
+            Double weight,
+            Boolean inStock) {
         public static ProductResponse from(Product p) {
             return new ProductResponse(
                     p.getId(), p.getName(), p.getSku(), p.getDescription(),
